groove/tags/release-4_9_2/src/groove/algebra/syntax/ExprParser.java
// $ANTLR 3.4 D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g 2013-12-10 11:41:22

package groove.algebra.syntax;
import groove.grammar.model.FormatErrorSet;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class ExprParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AMP", "ASTERISK", "BAR", "BOOL", "BSLASH", "CALL", "COLON", "COMMA", "CONST", "DOLLAR", "DONT_CARE", "DOT", "EQ", "EscapeSequence", "FALSE", "FIELD", "GE", "GT", "ID", "INT", "LCURLY", "LE", "LPAR", "LT", "MINUS", "NAT_LIT", "NEQ", "NOT", "Naturalumber", "NonIntegerNumber", "OPER", "PAR", "PERCENT", "PLUS", "QUOTE", "RCURLY", "REAL", "REAL_LIT", "RPAR", "SEMI", "SHARP", "SLASH", "STRING", "STRING_LIT", "TRUE", "VAR", "WS"
    };

    public static final int EOF=-1;
    public static final int AMP=4;
    public static final int ASTERISK=5;
    public static final int BAR=6;
    public static final int BOOL=7;
    public static final int BSLASH=8;
    public static final int CALL=9;
    public static final int COLON=10;
    public static final int COMMA=11;
    public static final int CONST=12;
    public static final int DOLLAR=13;
    public static final int DONT_CARE=14;
    public static final int DOT=15;
    public static final int EQ=16;
    public static final int EscapeSequence=17;
    public static final int FALSE=18;
    public static final int FIELD=19;
    public static final int GE=20;
    public static final int GT=21;
    public static final int ID=22;
    public static final int INT=23;
    public static final int LCURLY=24;
    public static final int LE=25;
    public static final int LPAR=26;
    public static final int LT=27;
    public static final int MINUS=28;
    public static final int NAT_LIT=29;
    public static final int NEQ=30;
    public static final int NOT=31;
    public static final int Naturalumber=32;
    public static final int NonIntegerNumber=33;
    public static final int OPER=34;
    public static final int PAR=35;
    public static final int PERCENT=36;
    public static final int PLUS=37;
    public static final int QUOTE=38;
    public static final int RCURLY=39;
    public static final int REAL=40;
    public static final int REAL_LIT=41;
    public static final int RPAR=42;
    public static final int SEMI=43;
    public static final int SHARP=44;
    public static final int SLASH=45;
    public static final int STRING=46;
    public static final int STRING_LIT=47;
    public static final int TRUE=48;
    public static final int VAR=49;
    public static final int WS=50;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public ExprParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public ExprParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return ExprParser.tokenNames; }
    public String getGrammarFileName() { return "D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g"; }


        private FormatErrorSet errors = new FormatErrorSet();
        
        public void displayRecognitionError(String[] tokenNames,
                RecognitionException e) {
            String hdr = getErrorHeader(e);
            String msg = getErrorMessage(e, tokenNames);
            this.errors.add(hdr + " " + msg, e.line, e.charPositionInLine);
        }

        public FormatErrorSet getErrors() {
            return this.errors;
        }


    public static class expression_return extends ParserRuleReturnScope {
        ExprTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "expression"
    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:47:1: expression : or_expr EOF !;
    public final ExprParser.expression_return expression() throws RecognitionException {
        ExprParser.expression_return retval = new ExprParser.expression_return();
        retval.start = input.LT(1);


        ExprTree root_0 = null;

        Token EOF2=null;
        ExprParser.or_expr_return or_expr1 =null;


        ExprTree EOF2_tree=null;

        try {
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:48:3: ( or_expr EOF !)
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:48:5: or_expr EOF !
            {
            root_0 = (ExprTree)adaptor.nil();


            pushFollow(FOLLOW_or_expr_in_expression110);
            or_expr1=or_expr();

            state._fsp--;

            adaptor.addChild(root_0, or_expr1.getTree());

            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_expression112); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (ExprTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (ExprTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "expression"


    public static class or_expr_return extends ParserRuleReturnScope {
        ExprTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "or_expr"
    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:51:1: or_expr : and_expr ( BAR ^ and_expr )* ;
    public final ExprParser.or_expr_return or_expr() throws RecognitionException {
        ExprParser.or_expr_return retval = new ExprParser.or_expr_return();
        retval.start = input.LT(1);


        ExprTree root_0 = null;

        Token BAR4=null;
        ExprParser.and_expr_return and_expr3 =null;

        ExprParser.and_expr_return and_expr5 =null;


        ExprTree BAR4_tree=null;

        try {
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:52:3: ( and_expr ( BAR ^ and_expr )* )
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:52:5: and_expr ( BAR ^ and_expr )*
            {
            root_0 = (ExprTree)adaptor.nil();


            pushFollow(FOLLOW_and_expr_in_or_expr126);
            and_expr3=and_expr();

            state._fsp--;

            adaptor.addChild(root_0, and_expr3.getTree());

            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:52:14: ( BAR ^ and_expr )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==BAR) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:52:15: BAR ^ and_expr
            	    {
            	    BAR4=(Token)match(input,BAR,FOLLOW_BAR_in_or_expr129); 
            	    BAR4_tree = 
            	    (ExprTree)adaptor.create(BAR4)
            	    ;
            	    root_0 = (ExprTree)adaptor.becomeRoot(BAR4_tree, root_0);


            	    pushFollow(FOLLOW_and_expr_in_or_expr132);
            	    and_expr5=and_expr();

            	    state._fsp--;

            	    adaptor.addChild(root_0, and_expr5.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (ExprTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (ExprTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "or_expr"


    public static class and_expr_return extends ParserRuleReturnScope {
        ExprTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "and_expr"
    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:55:1: and_expr : not_expr ( AMP ^ not_expr )* ;
    public final ExprParser.and_expr_return and_expr() throws RecognitionException {
        ExprParser.and_expr_return retval = new ExprParser.and_expr_return();
        retval.start = input.LT(1);


        ExprTree root_0 = null;

        Token AMP7=null;
        ExprParser.not_expr_return not_expr6 =null;

        ExprParser.not_expr_return not_expr8 =null;


        ExprTree AMP7_tree=null;

        try {
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:56:3: ( not_expr ( AMP ^ not_expr )* )
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:56:5: not_expr ( AMP ^ not_expr )*
            {
            root_0 = (ExprTree)adaptor.nil();


            pushFollow(FOLLOW_not_expr_in_and_expr147);
            not_expr6=not_expr();

            state._fsp--;

            adaptor.addChild(root_0, not_expr6.getTree());

            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:56:14: ( AMP ^ not_expr )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==AMP) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:56:15: AMP ^ not_expr
            	    {
            	    AMP7=(Token)match(input,AMP,FOLLOW_AMP_in_and_expr150); 
            	    AMP7_tree = 
            	    (ExprTree)adaptor.create(AMP7)
            	    ;
            	    root_0 = (ExprTree)adaptor.becomeRoot(AMP7_tree, root_0);


            	    pushFollow(FOLLOW_not_expr_in_and_expr153);
            	    not_expr8=not_expr();

            	    state._fsp--;

            	    adaptor.addChild(root_0, not_expr8.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (ExprTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (ExprTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "and_expr"


    public static class not_expr_return extends ParserRuleReturnScope {
        ExprTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "not_expr"
    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:59:1: not_expr : ( NOT ^ not_expr | equal_expr );
    public final ExprParser.not_expr_return not_expr() throws RecognitionException {
        ExprParser.not_expr_return retval = new ExprParser.not_expr_return();
        retval.start = input.LT(1);


        ExprTree root_0 = null;

        Token NOT9=null;
        ExprParser.not_expr_return not_expr10 =null;

        ExprParser.equal_expr_return equal_expr11 =null;


        ExprTree NOT9_tree=null;

        try {
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:60:3: ( NOT ^ not_expr | equal_expr )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==NOT) ) {
                alt3=1;
            }
            else if ( (LA3_0==FALSE||LA3_0==ID||LA3_0==LPAR||(LA3_0 >= MINUS && LA3_0 <= NAT_LIT)||LA3_0==REAL_LIT||(LA3_0 >= STRING_LIT && LA3_0 <= TRUE)) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:60:5: NOT ^ not_expr
                    {
                    root_0 = (ExprTree)adaptor.nil();


                    NOT9=(Token)match(input,NOT,FOLLOW_NOT_in_not_expr168); 
                    NOT9_tree = 
                    (ExprTree)adaptor.create(NOT9)
                    ;
                    root_0 = (ExprTree)adaptor.becomeRoot(NOT9_tree, root_0);


                    pushFollow(FOLLOW_not_expr_in_not_expr171);
                    not_expr10=not_expr();

                    state._fsp--;

                    adaptor.addChild(root_0, not_expr10.getTree());

                    }
                    break;
                case 2 :
                    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:61:5: equal_expr
                    {
                    root_0 = (ExprTree)adaptor.nil();


                    pushFollow(FOLLOW_equal_expr_in_not_expr177);
                    equal_expr11=equal_expr();

                    state._fsp--;

                    adaptor.addChild(root_0, equal_expr11.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (ExprTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (ExprTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "not_expr"


    public static class equal_expr_return extends ParserRuleReturnScope {
        ExprTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "equal_expr"
    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:63:1: equal_expr : compare_expr ( ( EQ | NEQ ) ^ compare_expr )* ;
    public final ExprParser.equal_expr_return equal_expr() throws RecognitionException {
        ExprParser.equal_expr_return retval = new ExprParser.equal_expr_return();
        retval.start = input.LT(1);


        ExprTree root_0 = null;

        Token set13=null;
        ExprParser.compare_expr_return compare_expr12 =null;

        ExprParser.compare_expr_return compare_expr14 =null;


        ExprTree set13_tree=null;

        try {
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:64:3: ( compare_expr ( ( EQ | NEQ ) ^ compare_expr )* )
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:64:5: compare_expr ( ( EQ | NEQ ) ^ compare_expr )*
            {
            root_0 = (ExprTree)adaptor.nil();


            pushFollow(FOLLOW_compare_expr_in_equal_expr187);
            compare_expr12=compare_expr();

            state._fsp--;

            adaptor.addChild(root_0, compare_expr12.getTree());

            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:64:18: ( ( EQ | NEQ ) ^ compare_expr )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==EQ||LA4_0==NEQ) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:64:19: ( EQ | NEQ ) ^ compare_expr
            	    {
            	    set13=(Token)input.LT(1);

            	    set13=(Token)input.LT(1);

            	    if ( input.LA(1)==EQ||input.LA(1)==NEQ ) {
            	        input.consume();
            	        root_0 = (ExprTree)adaptor.becomeRoot(
            	        (ExprTree)adaptor.create(set13)
            	        , root_0);
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    pushFollow(FOLLOW_compare_expr_in_equal_expr199);
            	    compare_expr14=compare_expr();

            	    state._fsp--;

            	    adaptor.addChild(root_0, compare_expr14.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (ExprTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (ExprTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "equal_expr"


    public static class compare_expr_return extends ParserRuleReturnScope {
        ExprTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "compare_expr"
    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:66:1: compare_expr : assign_expr ( ( LT | LE | GT | GE ) ^ assign_expr )* ;
    public final ExprParser.compare_expr_return compare_expr() throws RecognitionException {
        ExprParser.compare_expr_return retval = new ExprParser.compare_expr_return();
        retval.start = input.LT(1);


        ExprTree root_0 = null;

        Token set16=null;
        ExprParser.assign_expr_return assign_expr15 =null;

        ExprParser.assign_expr_return assign_expr17 =null;


        ExprTree set16_tree=null;

        try {
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:67:3: ( assign_expr ( ( LT | LE | GT | GE ) ^ assign_expr )* )
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:67:5: assign_expr ( ( LT | LE | GT | GE ) ^ assign_expr )*
            {
            root_0 = (ExprTree)adaptor.nil();


            pushFollow(FOLLOW_assign_expr_in_compare_expr211);
            assign_expr15=assign_expr();

            state._fsp--;

            adaptor.addChild(root_0, assign_expr15.getTree());

            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:67:17: ( ( LT | LE | GT | GE ) ^ assign_expr )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( ((LA5_0 >= GE && LA5_0 <= GT)||LA5_0==LE||LA5_0==LT) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:67:18: ( LT | LE | GT | GE ) ^ assign_expr
            	    {
            	    set16=(Token)input.LT(1);

            	    set16=(Token)input.LT(1);

            	    if ( (input.LA(1) >= GE && input.LA(1) <= GT)||input.LA(1)==LE||input.LA(1)==LT ) {
            	        input.consume();
            	        root_0 = (ExprTree)adaptor.becomeRoot(
            	        (ExprTree)adaptor.create(set16)
            	        , root_0);
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    pushFollow(FOLLOW_assign_expr_in_compare_expr231);
            	    assign_expr17=assign_expr();

            	    state._fsp--;

            	    adaptor.addChild(root_0, assign_expr17.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (ExprTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (ExprTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "compare_expr"


    public static class assign_expr_return extends ParserRuleReturnScope {
        ExprTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "assign_expr"
    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:70:1: assign_expr : add_expr ;
    public final ExprParser.assign_expr_return assign_expr() throws RecognitionException {
        ExprParser.assign_expr_return retval = new ExprParser.assign_expr_return();
        retval.start = input.LT(1);


        ExprTree root_0 = null;

        ExprParser.add_expr_return add_expr18 =null;



        try {
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:71:3: ( add_expr )
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:71:5: add_expr
            {
            root_0 = (ExprTree)adaptor.nil();


            pushFollow(FOLLOW_add_expr_in_assign_expr248);
            add_expr18=add_expr();

            state._fsp--;

            adaptor.addChild(root_0, add_expr18.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (ExprTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (ExprTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "assign_expr"


    public static class add_expr_return extends ParserRuleReturnScope {
        ExprTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "add_expr"
    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:74:1: add_expr : mult_expr ( ( PLUS | MINUS ) ^ mult_expr )* ;
    public final ExprParser.add_expr_return add_expr() throws RecognitionException {
        ExprParser.add_expr_return retval = new ExprParser.add_expr_return();
        retval.start = input.LT(1);


        ExprTree root_0 = null;

        Token set20=null;
        ExprParser.mult_expr_return mult_expr19 =null;

        ExprParser.mult_expr_return mult_expr21 =null;


        ExprTree set20_tree=null;

        try {
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:75:3: ( mult_expr ( ( PLUS | MINUS ) ^ mult_expr )* )
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:75:5: mult_expr ( ( PLUS | MINUS ) ^ mult_expr )*
            {
            root_0 = (ExprTree)adaptor.nil();


            pushFollow(FOLLOW_mult_expr_in_add_expr263);
            mult_expr19=mult_expr();

            state._fsp--;

            adaptor.addChild(root_0, mult_expr19.getTree());

            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:75:15: ( ( PLUS | MINUS ) ^ mult_expr )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==MINUS||LA6_0==PLUS) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:75:16: ( PLUS | MINUS ) ^ mult_expr
            	    {
            	    set20=(Token)input.LT(1);

            	    set20=(Token)input.LT(1);

            	    if ( input.LA(1)==MINUS||input.LA(1)==PLUS ) {
            	        input.consume();
            	        root_0 = (ExprTree)adaptor.becomeRoot(
            	        (ExprTree)adaptor.create(set20)
            	        , root_0);
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    pushFollow(FOLLOW_mult_expr_in_add_expr275);
            	    mult_expr21=mult_expr();

            	    state._fsp--;

            	    adaptor.addChild(root_0, mult_expr21.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (ExprTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (ExprTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "add_expr"


    public static class mult_expr_return extends ParserRuleReturnScope {
        ExprTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "mult_expr"
    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:78:1: mult_expr : unary_expr ( ( ASTERISK | SLASH | PERCENT ) ^ unary_expr )* ;
    public final ExprParser.mult_expr_return mult_expr() throws RecognitionException {
        ExprParser.mult_expr_return retval = new ExprParser.mult_expr_return();
        retval.start = input.LT(1);


        ExprTree root_0 = null;

        Token set23=null;
        ExprParser.unary_expr_return unary_expr22 =null;

        ExprParser.unary_expr_return unary_expr24 =null;


        ExprTree set23_tree=null;

        try {
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:79:3: ( unary_expr ( ( ASTERISK | SLASH | PERCENT ) ^ unary_expr )* )
            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:79:5: unary_expr ( ( ASTERISK | SLASH | PERCENT ) ^ unary_expr )*
            {
            root_0 = (ExprTree)adaptor.nil();


            pushFollow(FOLLOW_unary_expr_in_mult_expr290);
            unary_expr22=unary_expr();

            state._fsp--;

            adaptor.addChild(root_0, unary_expr22.getTree());

            // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:79:16: ( ( ASTERISK | SLASH | PERCENT ) ^ unary_expr )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==ASTERISK||LA7_0==PERCENT||LA7_0==SLASH) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:79:17: ( ASTERISK | SLASH | PERCENT ) ^ unary_expr
            	    {
            	    set23=(Token)input.LT(1);

            	    set23=(Token)input.LT(1);

            	    if ( input.LA(1)==ASTERISK||input.LA(1)==PERCENT||input.LA(1)==SLASH ) {
            	        input.consume();
            	        root_0 = (ExprTree)adaptor.becomeRoot(
            	        (ExprTree)adaptor.create(set23)
            	        , root_0);
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    pushFollow(FOLLOW_unary_expr_in_mult_expr306);
            	    unary_expr24=unary_expr();

            	    state._fsp--;

            	    adaptor.addChild(root_0, unary_expr24.getTree());

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (ExprTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (ExprTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "mult_expr"


    public static class unary_expr_return extends ParserRuleReturnScope {
        ExprTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "unary_expr"
    // D:\\Eclipse\\groove\\src\\groove\\algebra\\syntax\\Expr.g:82:1: unary_expr : ( MINUS ^ unary_expr | atom_expr );
    public final ExprParser.unary_expr_return unary_expr() throws RecognitionException {
        ExprParser.unary_expr_return retval = new ExprParser.unary_expr_return();
        retval.start = input.LT(1);


        ExprTree root_0 = null;

        Token MINUS25=null;
        ExprParser.unary_expr_return unary_expr26 =null;

        ExprParser.atom_expr_return atom_expr27 =null;


        ExprTree MINUS25_tree=null;

        try {
